--- a/UnitTestClassLibrary/UnitTestClassLibrary.csproj
+++ b/UnitTestClassLibrary/UnitTestClassLibrary.csproj
@@ -45,6 +45,9 @@
     <Reference Include="Moq, Version=4.7.142.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.142\lib\net45\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Primitives, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ComponentModel.Primitives.4.3.0\lib\net45\System.ComponentModel.Primitives.dll</HintPath>
@@ -79,8 +82,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\FakeResponseHandler.cs" />
+    <Compile Include="Delivery\DeliveryDateServiceTests.cs" />
     <Compile Include="Math\FactorialCalculatorTests.cs" />
     <Compile Include="Math\MathServiceTests.cs" />
+    <Compile Include="Orders\ExternalOrdersApiTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weather\ExternalWeatherApiTests.cs" />
   </ItemGroup>
