--- a/UnitTestClassLibrary/packages.config
+++ b/UnitTestClassLibrary/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac.Extras.Moq" version="4.2.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Moq" version="4.7.142" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" />
   <package id="xunit" version="2.3.0" targetFramework="net461" />
